--- a/MES_WATER/Views/MEB500A/Update.cshtml
+++ b/MES_WATER/Views/MEB500A/Update.cshtml
@@ -1,5 +1,5 @@
 ﻿@*修改點 向下*@
-@model MES_WATER.Models.MEB15_0000
+@model MES_WATER.Models.MEB50_0000
 @*修改點 向上*@
 @using MES_WATER.Models;
 
@@ -19,10 +19,10 @@
 
     @* 修改點 向下 *@
     // 主檔的Model名稱
-    string key = gmv.GetKey(new MEB15_0000());
+    string key = gmv.GetKey(new MEB50_0000());
 
     // 明細的Model名稱
-    MEB15_0100 obj_D1 = new MEB15_0100();
+    MEB50_0000 obj_D1 = new MEB50_0000();
     List<string> DisplayNameList_D1 = gmv.Get_DisplayNames(obj_D1);
     List<ColumnInfo> ColumnInfoList = gmv.Get_ColumnInfoList(obj_D1);
     string key_D1 = gmv.GetKey(obj_D1);
@@ -79,130 +79,144 @@
                     <div class="col-sm-offset-2 col-md-6">
                         <div class="row">
                             <div class="col-sm-12">
-                                @CustomHelper.Get_Label(Model, sPrgCode, "mac_code", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
+                                @CustomHelper.Get_Label(Model, sPrgCode, "ITEM_CODE", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
                                 <div class="col-md-8 col-xs-7">
                                     <div>
-                                        @Html.EditorFor(model => model.mac_code, new { htmlAttributes = new { @class = " col-xs-12", @readonly = "readonly" } })
+                                        @Html.EditorFor(model => model.ITEM_CODE, new { htmlAttributes = new { @class = " col-xs-12", @readonly = "readonly" } })
                                     </div>
                                     <div style="clear:both;"></div>
-                                    @Html.ValidationMessageFor(model => model.mac_code, "", new { @class = "text-danger" })
+                                    @Html.ValidationMessageFor(model => model.ITEM_CODE, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
                         <br />
                         <div class="row">
                             <div class="col-sm-12">
-                                @CustomHelper.Get_Label(Model, sPrgCode, "mac_name", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
+                                @CustomHelper.Get_Label(Model, sPrgCode, "ITEM_SPECIFICATION", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
                                 <div class="col-md-8 col-xs-7">
                                     <div>
-                                        @Html.EditorFor(model => model.mac_name, new { htmlAttributes = new { @class = " col-xs-12" } })
+                                        @Html.EditorFor(model => model.ITEM_SPECIFICATION, new { htmlAttributes = new { @class = " col-xs-12" } })
                                     </div>
                                     <div style="clear:both;"></div>
-                                    @Html.ValidationMessageFor(model => model.mac_name, "", new { @class = "text-danger" })
+                                    @Html.ValidationMessageFor(model => model.ITEM_SPECIFICATION, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                         </div>
                         <br />
                         <div class="row">
                             <div class="col-sm-12">
-                                @CustomHelper.Get_Label(Model, sPrgCode, "line_code", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
-                                <div class="col-sm-8 col-xs-5">
-                                    <select class="chosen-select" id="line_code" name="line_code">
-                                        @CustomHelper.Get_Option(line_code_list, Model.line_code, true)
-                                    </select>
-                                    @Html.ValidationMessageFor(model => model.line_code, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                        </div>
-                        @*<br />
-                        <div class="row">
-                            <div class="col-sm-12">
-                                @CustomHelper.Get_Label(Model, sPrgCode, "std_qty", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
-                                <div class="col-md-8  col-xs-7">
-                                    <div>
-                                        @Html.EditorFor(model => model.std_qty, new { htmlAttributes = new { @class = " col-xs-12" } })
-                                    </div>
-                                    <div style="clear:both;"></div>
-                                    @Html.ValidationMessageFor(model => model.std_qty, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                        </div>*@
-                        @*<br />
-                        <div class="row">
-                            <div class="col-sm-12">
-                                @CustomHelper.Get_Label(Model, sPrgCode, "std_time", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
-                                <div class="col-md-8  col-xs-7">
-                                    <div>
-                                        @Html.EditorFor(model => model.std_time, new { htmlAttributes = new { @class = " col-xs-12" } })
-                                    </div>
-                                    <div style="clear:both;"></div>
-                                    @Html.ValidationMessageFor(model => model.std_time, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                        </div>*@
-                        @*<br />
-                        <div class="row">
-                            <div class="col-sm-12">
-                                @CustomHelper.Get_Label(Model, sPrgCode, "mac_type_code", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
-                                <div class="col-sm-8 col-xs-6">
-                                    <select class="chosen-select" id="mac_type_code" name="mac_type_code">
-                                        @CustomHelper.Get_Option(mac_type_code_list, Model.mac_type_code, true)
-                                    </select>
-                                    @Html.ValidationMessageFor(model => model.mac_type_code, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                        </div>*@
-                        <br />
-                        <div class="row">
-                            <div class="col-sm-12">
-                                @CustomHelper.Get_Label(Model, sPrgCode, "mac_type", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
-                                <div class="col-sm-8 col-xs-5">
-                                    <select class="chosen-select" id="mac_type" name="mac_type">
-                                        @CustomHelper.Get_Option(mac_type_list, Model.mac_type, true)
-                                    </select>
-                                    @Html.ValidationMessageFor(model => model.mac_type, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                        </div>
-                        @*<br />
-                        <div class="row">
-                            <div class="col-sm-12">
-                                @CustomHelper.Get_Label(Model, sPrgCode, "ip_type", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
-                                <div class="col-sm-8 col-xs-5">
-                                    <select class="chosen-select" id="ip_type" name="ip_type">
-                                        @CustomHelper.Get_Option(ip_type_list, Model.ip_type, true)
-                                    </select>
-                                    @Html.ValidationMessageFor(model => model.ip_type, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                        </div>
-                        <br />
-                        <div class="row">
-                            <div class="col-sm-12">
-                                @CustomHelper.Get_Label(Model, sPrgCode, "mac_ip", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
+                                @CustomHelper.Get_Label(Model, sPrgCode, "_pro_type", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
                                 <div class="col-md-8 col-xs-7">
                                     <div>
-                                        @Html.EditorFor(model => model.mac_ip, new { htmlAttributes = new { @class = " col-xs-12" } })
+                                        @Html.EditorFor(model => model._pro_type, new { htmlAttributes = new { @class = " col-xs-12" } })
                                     </div>
+                                    <div style="clear:both;"></div>
+                                    @Html.ValidationMessageFor(model => model._pro_type, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                        <br />
+                        <div class="row">
+                            <div class="col-sm-12">
+                                @CustomHelper.Get_Label(Model, sPrgCode, "pro_uph", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
+                                <div class="col-md-8 col-xs-7">
+                                    <div>
+                                        @Html.EditorFor(model => model.pro_uph, new { htmlAttributes = new { @class = " col-xs-12" } })
+                                    </div>
+                                    <div style="clear:both;"></div>
+                                    @Html.ValidationMessageFor(model => model.pro_uph, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                        @*<br />
+        <div class="row">
+            <div class="col-sm-12">
+                @CustomHelper.Get_Label(Model, sPrgCode, "std_qty", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
+                <div class="col-md-8  col-xs-7">
+                    <div>
+                        @Html.EditorFor(model => model.std_qty, new { htmlAttributes = new { @class = " col-xs-12" } })
+                    </div>
+                    <div style="clear:both;"></div>
+                    @Html.ValidationMessageFor(model => model.std_qty, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>*@
+                        @*<br />
+        <div class="row">
+            <div class="col-sm-12">
+                @CustomHelper.Get_Label(Model, sPrgCode, "std_time", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
+                <div class="col-md-8  col-xs-7">
+                    <div>
+                        @Html.EditorFor(model => model.std_time, new { htmlAttributes = new { @class = " col-xs-12" } })
+                    </div>
+                    <div style="clear:both;"></div>
+                    @Html.ValidationMessageFor(model => model.std_time, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>*@
+                        @*<br />
+        <div class="row">
+            <div class="col-sm-12">
+                @CustomHelper.Get_Label(Model, sPrgCode, "mac_type_code", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
+                <div class="col-sm-8 col-xs-6">
+                    <select class="chosen-select" id="mac_type_code" name="mac_type_code">
+                        @CustomHelper.Get_Option(mac_type_code_list, Model.mac_type_code, true)
+                    </select>
+                    @Html.ValidationMessageFor(model => model.mac_type_code, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>*@
+                        @*<br />
+        <div class="row">
+            <div class="col-sm-12">
+                @CustomHelper.Get_Label(Model, sPrgCode, "mac_type", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
+                <div class="col-sm-8 col-xs-5">
+                    <select class="chosen-select" id="mac_type" name="mac_type">
+                        @CustomHelper.Get_Option(mac_type_list, Model.mac_type, true)
+                    </select>
+                    @Html.ValidationMessageFor(model => model.mac_type, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>*@
+                        @*<br />
+        <div class="row">
+            <div class="col-sm-12">
+                @CustomHelper.Get_Label(Model, sPrgCode, "ip_type", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
+                <div class="col-sm-8 col-xs-5">
+                    <select class="chosen-select" id="ip_type" name="ip_type">
+                        @CustomHelper.Get_Option(ip_type_list, Model.ip_type, true)
+                    </select>
+                    @Html.ValidationMessageFor(model => model.ip_type, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+        <br />
+        <div class="row">
+            <div class="col-sm-12">
+                @CustomHelper.Get_Label(Model, sPrgCode, "mac_ip", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
+                <div class="col-md-8 col-xs-7">
+                    <div>
+                        @Html.EditorFor(model => model.mac_ip, new { htmlAttributes = new { @class = " col-xs-12" } })
+                    </div>
 
-                                    <div style="clear:both;"></div>
-                                    @Html.ValidationMessageFor(model => model.mac_ip, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                        </div>*@
+                    <div style="clear:both;"></div>
+                    @Html.ValidationMessageFor(model => model.mac_ip, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>*@
                         <br />
                         @*<div class="row">
-                            <div class="col-sm-12">
-                                @CustomHelper.Get_Label(Model, sPrgCode, "cmemo", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
-                                <div class="col-md-8 col-xs-7">
-                                    <div>
-                                        <textarea id="cmemo" name="cmemo" class="col-xs-12" form="validation_form">@Model.cmemo</textarea>
-                                    </div>
-                                    <div style="clear:both;"></div>
-                                    @Html.ValidationMessageFor(model => model.cmemo, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                        </div>*@
+            <div class="col-sm-12">
+                @CustomHelper.Get_Label(Model, sPrgCode, "cmemo", htmlAttributes: new { @class = "col-sm-3 control-label no-padding-right" })
+                <div class="col-md-8 col-xs-7">
+                    <div>
+                        <textarea id="cmemo" name="cmemo" class="col-xs-12" form="validation_form">@Model.cmemo</textarea>
+                    </div>
+                    <div style="clear:both;"></div>
+                    @Html.ValidationMessageFor(model => model.cmemo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>*@
                     </div>
                 </div>
                 @*修改點 向上 主檔輸入畫面編排*@
@@ -1035,7 +1049,7 @@
 
 
             // sto_code
-            form.find('input[name="mac_code"]').val('@Model.mac_code')
+            @*form.find('input[name="mac_code"]').val('@Model.mac_code')*@
 
             $('#tr_mac_code').css('display', 'none')
 
