--- a/MES_WATER/Views/DSB111B/Index.cshtml
+++ b/MES_WATER/Views/DSB111B/Index.cshtml
@@ -1,13 +1,23 @@
 ﻿@using System.Data
 @using MES_WATER.Models
 @{
+
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
+    string sPrgCode = ViewBag.prg_code;
+
     Comm comm = new Comm();
+
+
     string sSql = "SELECT mac_code ,mac_name FROM MEB15_0000 ";
     DataTable dtTmp = comm.Get_DataTable(sSql);
+    List<DDLList> mac_code_list = comm.Get_DDLOption("MEB15_0000", "mac_code", "mac_name");
+
     string sSql_2 = "SELECT line_code ,line_name FROM MEB12_0000 ";
     DataTable dtTmp_2 = comm.Get_DataTable(sSql_2);
+
+    List<DDLList> line_code_list = comm.Get_DDLOption("MEB12_0000", "line_code", "line_name");
 }
 
 <style>
@@ -125,35 +135,19 @@
                 <span class=''>更新</span>
             </a>
         </div>
-
         <div>
             <span style="font-size:20px ;color: #fff; padding-left:50px;">線別</span>
             <select name="lineList" id="lineList">
-                @{
-                    foreach (DataRow dr in dtTmp_2.Rows)
-                    {
-                        <option value="@dr["line_code"]">@dr["line_code"] - @dr["line_name"]</option>
-                    }
-                }
+                @CustomHelper.Get_Option(line_code_list, "", true)
             </select>
 
-          
-                <span style="font-size:20px ;color: #fff; padding-left:50px;">設備清單</span>
-                <select name="MacCodeList" id="MacCodeList" class="multiselect" multiple>
-                    @{
-                        foreach (DataRow dr in dtTmp.Rows)
-                        {
-                            <option value="@dr["mac_code"]">@dr["mac_code"] - @dr["mac_name"]</option>
-                        }
-                    }
-                </select>
+
+            <span style="font-size:20px ;color: #fff; padding-left:50px;">設備清單</span>
+            <select name="MacCodeList" id="MacCodeList" class="multiselect" multiple></select>
         </div>
 
-            @*<div class="pull-left" style="margin-left: 10px">
-                <h5>更新倒數: <span id="update_count"></span> 秒</h5>
-            </div>*@
-        </div>
     </div>
+</div>
 
 <br>
 
@@ -167,10 +161,30 @@
 }
 <script>
     jQuery(function ($) {
+        //--------global----------//
+        let $macCode = $('#MacCodeList');
+        $(document).ready(function (){
+            Set_multiSelectItem();
+            Set_MacHtml();
+        })
 
-        let $container = $('.mac-container')
-        $(document).ready(function () {
-            $('.multiselect').multiselect({
+        //-------function-even-start---------//
+        $("#lineList").change(function () {
+            Set_multiSelectItem();
+        })
+
+        // 點擊更新按鈕
+        $('#refresh').click(function () {
+            immediateUpdate()
+        })
+        //-------function-even-end---------//
+
+        //---------function---------//
+        //初始化複選格式style
+        function init_multiSelect($div){
+            $("select#MacCodeList").multiselect('destroy');
+
+            $div.multiselect({
                 enableFiltering: true,
                 enableHTML: true,
                 allSelectedText: "全選",
@@ -190,19 +204,11 @@
                     divider: '<li class="multiselect-item divider"></li>',
                     liGroup: '<li class="multiselect-item multiselect-group"><label></label></li>'
                 },
-
             });
             //預設全選
-            $('#MacCodeList').multiselect('selectAll', false);
-            $('#MacCodeList').multiselect('updateButtonText');
-
-            //下拉式改變更新內容
-            $('select').on('change', function () { immediateUpdate(); });
-            // 點擊更新按鈕
-            $('#refresh').click(function () { immediateUpdate(); });
-            // 修改INPUT 筆數
-            $('#view_count').change(function () { immediateUpdate(); });
-
+            $("select#MacCodeList").multiselect('selectAll', false);
+            $("select#MacCodeList").multiselect('updateButtonText');
+            $('select#MacCodeList').on('change', function () { immediateUpdate(); });
             $('#view_wrap').change(function () {
                 if ($("#view_wrap").is(":checked")) {
                     $('.mac-container').addClass("mac-container--rows");
@@ -212,24 +218,36 @@
                 }
                 immediateUpdate();
             });
-            // 初始下拉
-            Set_DropDownList();
-            // 初始
-            Set_MacHtml();
-            //刷新
-            setTimerUpdate();
-        });
+        }
 
+        function Set_multiSelectItem(){
+            const selectLists = $("#MacCodeList");
+            let line_code = $('#lineList').val();
+            selectLists.empty();
+            // selectLists.append('<option value="">--請選擇--</option>');
+            $.ajax({
+                async: false,
+                url: '@Url.Action("Init_Get_MacCodeSelectList")',
+                data: {
+                    'line_code': line_code
+                },
+                success: function(data) {
+                    if (typeof (data) == 'object' && data != null ) {
+                        Array.from(data).forEach(function(v,i){
+                            selectLists.append('<option value="' + v.mac_code + '">' + v.mac_code + " - " + v.mac_name+'</option>');
+                        });
+                        init_multiSelect(selectLists);
+                        $("select#MacCodeList").multiselect('refresh');
+                        $('select#MacCodeList').on('change', function () { immediateUpdate(); });
+                    }
+                }
+            });
+            immediateUpdate();
+        }
 
-
+        let $container = $('.mac-container')
         // 初始 - 定時更新
         let currentTimer = setTimerUpdate()
-
-        // 點擊更新按鈕
-        $('#refresh').click(function () {
-            immediateUpdate()
-
-        })
 
         // 立刻更新並重新設置定時
         function immediateUpdate() {
@@ -247,7 +265,7 @@
         function setTimerUpdate() {
             let timer = Timer({
                 initSeconds: 15,
-                tick: 1000,
+                tick: 10000000000000000,
                 launch: {
                     callback: function () {
                         //Set_MacHtml()
@@ -297,6 +315,7 @@
             let order = $('#sortList').val();// 排序
             let line_code = $('#lineList').val();// 線別
 
+
             let macCodeItem = $('#MacCodeList').val();
             if (macCodeItem) {
                 macCodeItem = macCodeItem.filter(x => x);  // 過濾空字串
@@ -305,10 +324,10 @@
             // ajax 開始，抓資料庫的機台清單
             $.ajax({
                 method: 'get',
-                url: '/DSB110B/Init_Get_MacCodeList',
+                url: '/DSB111B/Init_Get_MacCodeList',
                 data: {
                     order: order,
-                    line_code: "",
+                    line_code: line_code,
                     Item: macCodeItem
                 }
             }).done(function (json) {
@@ -319,6 +338,7 @@
                     let $macItem = _getNewMacElement(item, boardType);
                     elements.push($macItem);
                 })
+
                 // ajax抓OEE資料 (by mac_code)
                 // 資料抓完設置到傳入的元素
                 update(elements, function (el) {
@@ -334,7 +354,6 @@
         function _getNewMacElement(oMacData) {
             let htmlString = `@Html.Raw(Html.Action("MacItem", "DSB111B"))`
             let $newDiv = $(htmlString)
-
             let mac_code = oMacData.mac_code
             let mac_name = oMacData.mac_name
 
@@ -355,7 +374,6 @@
 
         // 傳入element清單
         function update(aMacElements, afterEachUpdate) {
-
             let mac_code_list = aMacElements.map(function (item, index) {
                 let mac_code = $(item).attr('data-mac_code')
 
@@ -369,7 +387,7 @@
                     pJson: JSON.stringify(mac_code_list)
                 }
             }).done(function (json) {
-                console.log(json)
+                $('.mac-container').html('');
                 aMacElements.forEach(function (item, index) {
                     // 加入資料到element
                     let mac_code = $(item).attr('data-mac_code')
@@ -395,29 +413,7 @@
                 alert('抓取資料失敗! ')
             })
         }
-        function Set_DropDownList() {
 
-            $('#lineList').empty();
-
-            $('#lineList').append(
-                $('<option></option>').val('').html('線別')
-            );
-
-            $.ajax({
-                method: 'get',
-                url: '/DSB110B/Get_LineCodeList',
-            }).done(function (json) {
-                json.forEach(function (item, index) {
-                    $('#lineList').append(
-                        $('<option></option>').val(item).html(item)
-                    );
-                })
-
-            }).fail(function () {
-                console.log("ERROR 502: 線別取得資料錯誤(Get_LineCodeList)")
-
-            })
-        }
         //
         function _setMacElementText($el, data) {
             if (!data) {
@@ -478,25 +474,6 @@
 
             $yield.text(data.yield)  // 產量
             $utilization.text(data.utilization)
-            /*$utilization.text(data.utilization + '%')*/  // 稼動
-
-            //// 稼動 換成百分比
-            //let num = parseFloat(data.utilization)
-            //if (num) {
-            //    num = (num * 100).toString()
-            //    // 取小數點後兩位
-            //    num = num.substring(0, num.indexOf('.') + 3)
-            //    $utilization.text(num + '%')
-
-            //} else {
-            //    if (num == 0)
-            //    {
-            //        $utilization.text('0%')
-            //    } else {
-            //        $utilization.text('')
-            //    }
-            //}
-
             $stop_time.text(data.stop_time + '分')  // 停機
             $work_time.text(data.work_time + '分')  // 工時
         }
