--- a/MES_WATER/Views/DSB111B/MacItem.cshtml
+++ b/MES_WATER/Views/DSB111B/MacItem.cshtml
@@ -8,9 +8,9 @@
         <span data-status_code="" class="status status-color-default">關機</span>
     </div>
     <div class="oee-container" >
-        <div class="oee-item yield-div" >
-            <span class="yield-label">良品數</span>
-            <span class="yield-value"></span>
+        <div class="oee-item MACHINE_CODE-div" >
+            <span class="MACHINE_CODE-label">良品數</span>
+            <span class="MACHINE_CODE-value"></span>
         </div>
         <div class="oee-item utilization-div" >
             <span class="utilization-label">不良品數</span>
