--- a/MES_WATER/Views/DSB111B/Board.cshtml
+++ b/MES_WATER/Views/DSB111B/Board.cshtml
@@ -159,7 +159,7 @@
                                                                 background: #000;
                                                             }
 
-                                                                .oee-container .oee-item.yield-div,
+                                                                .oee-container .oee-item.MACHINE_CODE-div,
                                                                 .oee-container .oee-item.stopTime-div {
                                                                     margin-right: 5px;
                                                                 }
@@ -169,7 +169,7 @@
                                                                     margin-left: 5px;
                                                                 }
 
-                                                                .oee-container .oee-item .yield-value,
+                                                                .oee-container .oee-item .MACHINE_CODE-value,
                                                                 .oee-container .oee-item .utilization-value,
                                                                 .oee-container .oee-item .stop_time-value,
                                                                 .oee-container .oee-item .work_time-value {
@@ -403,7 +403,7 @@
 
             let $status = $el.find('.status')
 
-            let $yield = $el.find('.yield-value')
+            let _300182 = $el.find('._300182-value')
             let $utilization = $el.find('.utilization-value')
             let $stop_time = $el.find('.stop_time-value')
             let $work_time = $el.find('.work_time-value')
@@ -444,7 +444,7 @@
                     break;
             }
 
-            $yield.text(data.yield)  // 產量
+            $pro_qty.text(data._300182)  // 產量
             $utilization.text(data.utilization + '%')  // 稼動
 
             //// 稼動 換成百分比
