--- a/MES_WATER/Views/DSB111B/Board.cshtml
+++ b/MES_WATER/Views/DSB111B/Board.cshtml
@@ -403,7 +403,7 @@
 
             let $status = $el.find('.status')
 
-            let _300182 = $el.find('._300182-value')
+            let pro_qty = $el.find('.pro_qty-value')
             let $utilization = $el.find('.utilization-value')
             let $stop_time = $el.find('.stop_time-value')
             let $work_time = $el.find('.work_time-value')
