--- a/MES_WATER/Views/DSB111B/Index.cshtml
+++ b/MES_WATER/Views/DSB111B/Index.cshtml
@@ -446,7 +446,7 @@
             $status.attr('data-status_code', data.status)
             if (data.status) {
                 switch (data.status.toUpperCase()) {
-                    case 'R':
+                    case '1':
                         $status.text('生產')
                         $status.attr('class', 'status status-color-run')
                         break;
@@ -454,7 +454,7 @@
                         $status.text('關機')
                         $status.attr('class', 'status status-color-default')
                         break;
-                    case 'I':
+                    case '0':
                         $status.text('閒置')
                         $status.attr('class', 'status status-color-idle')
                         break;
@@ -462,8 +462,8 @@
                         $status.text('停機')
                         $status.attr('class', 'status status-color-stop')
                         break;
-                    case 'A':
-                        $status.text('警報')
+                    case '2':
+                        $status.text('異常中')
                         $status.attr('class', 'status status-color-stop')
                         break;
                     default:
