--- a/MES_WATER/Views/DSB111B/Index.cshtml
+++ b/MES_WATER/Views/DSB111B/Index.cshtml
@@ -476,7 +476,7 @@
             $pro_qty.text(data.pro_qty)  // 產量
             $utilization.text(data.utilization)
             $stop_time.text(data.stop_time + '分')  // 停機
-            $work_time.text(data.work_time + '分')  // 工時
+            $work_time.text(data.work_time + '%')  // 工時
         }
 
 
