--- a/MES_WATER/Views/RPT231A/Index.cshtml
+++ b/MES_WATER/Views/RPT231A/Index.cshtml
@@ -131,6 +131,11 @@
             </ul>
         </div>
     </div>
+    <div class="pull-left" style="margin-left: 10px">
+        <a onclick="window.location.href='@Url.Action("Upload")'" class="btn btn-white btn-warning btn-bold" role="button">
+            <span class=''>匯入</span>
+        </a>
+    </div>
 
 </div>
 <!-- Modal Content -->
